unpackaged/objects/Concurrent_Degree_Programme__c.object
<CustomObject>
    <fields>
        <fullName>Accomplishments__c</fullName>
        <label>Accomplishments</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Awards__c</fullName>
        <label>Awards</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Concurrent Degree Programmes</relationshipLabel>
        <relationshipName>Concurrent_Degree_Programmes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Citizenship__c</fullName>
        <label>Citizenship</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Number__c</fullName>
        <label>Contact Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Concurrent Degree Programmes</relationshipLabel>
        <relationshipName>Concurrent_Degree_Programmes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Birth__c</fullName>
        <label>Date of Birth</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Degree_Programme__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Joint/dual degree programmes</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Education__c</fullName>
        <label>Education</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>NUS Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Exchange_Programme_Semesters__c</fullName>
        <label>Exchange Programme Semesters</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>One Semester</fullName>
                </value>
                <value>
                    <fullName>Two Semesters</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Exchange_Programme__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Exchange Programme</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>First_Answer__c</fullName>
        <label>The most urgent policy challenge</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Full_Name__c</fullName>
        <label>Full Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <label>Gender</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Male</fullName>
                </value>
                <value>
                    <fullName>Female</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Matriculation__c</fullName>
        <label>Matriculation No.</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mobile_Number__c</fullName>
        <label>Mobile Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Other_Information__c</fullName>
        <label>Other Information (If Any)</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Programme_Name__c</fullName>
        <label>The Programme Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Second_Answer__c</fullName>
        <label>The main strengths and weaknesses</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Special_Programme_Name__c</fullName>
        <label>Special Programme Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Special_Programmes__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Currently in any special programme</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Third_Answer__c</fullName>
        <label>The programme will help you</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Volunteer_Work__c</fullName>
        <label>Volunteer Work</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <label>Concurrent Degree Programme</label>
    <nameField>
        <displayFormat>CDP-{0000000000}</displayFormat>
        <label>Concurrent Degree Programme ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Concurrent Degree Programmes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>